# RIDB

./: .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  README.MD  README.md  biome.json  build.sh  esbuild.base.js  esbuild.base.mjs  esbuild.config.mjs  eslint.base.mjs  lerna.json  migrations.json  nx.json  package-lock.json  package.json  performance.sh  publish.sh  release.base.js  release.config..js  release.config.js  test.sh  tsconfig.base.json  tsconfig.json  turbo.json  typedoc.json  update.sh
.github/workflows/: lint-pr.yml  pr.yml  release.yml
classes/: RIDB.md
docs/: README.md  packages.md
docs/@trust0/ridb/: README.md
docs/@trust0/ridb-core/: README.md
docs/@trust0/ridb-level/: README.md
docs/@trust0/ridb-mongodb/: README.md
docs/@trust0/ridb-react/: README.md
docs/classes/: Collection.md  Database.md  Property.md  RIDB.md  Schema.md
docs/enumerations/: OpType.md
docs/ridb-level/src/: README.md
docs/ridb/src/: README.md
docs/type-aliases/: CreateStorage.md  Doc.md  ExtractType.md  Operation.md  RIDBModule.md  SchemaType.md  SchemaTypeRecord.md  StartOptions.md
docs/variables/: SchemaFieldType.md
examples/: package.json
examples/node/: index.cjs  index.mjs  package-lock.json  package.json
examples/src/app/: page.tsx
examples/web/: package-lock.json  package.json
namespaces/RIDBTypes/: README.md
namespaces/RIDBTypes/classes/: BasePlugin.md  BaseStorage.md  Collection.md  Database.md  EncryptionPlugin.md  InMemory.md  Internals.md  Loader.md  Property.md  Query.md  Schema.md  Storage.md  StorageInternal.md  WasmBindgenTestContext.md
namespaces/RIDBTypes/enumerations/: OpType.md
namespaces/RIDBTypes/functions/: initSync.md  main.md  (+7 more)
scripts/: docs.js
src/: index.ts  lib.rs  utils.rs
src/collection/: mod.rs
src/database/: mod.rs
src/plugin/: mod.rs
src/query/: mod.rs
src/schema/: mod.rs  property.rs  property_type.rs
src/storage/: base.rs  mod.rs
tests/: browser.test.ts  performance-browser.test.ts  performance-node.test.ts  shared.ts
tests/test/: performance.test.ts
ts/: .releaserc.js  CHANGELOG.md  README.md  build.sh  esbuild.config.mjs  index.rs  mod.rs  package-lock.json  package.json  publish.sh  release.config.js  test.sh  tsconfig.json  typedoc.json  vitest.config.ts
ts/examples/: index.cjs  index.mjs
ts/src/: index.ts
ts/tests/: browser.test.ts  node.test.ts  schemas.test.ts  setup.ts  shared.ts
variables/: SchemaFieldType.md
(+128 files in other folders)
